--- a/summit/package.json
+++ b/summit/package.json
@@ -14,6 +14,7 @@
     "react-owl-carousel": "^2.3.3",
     "react-router-dom": "^6.13.0",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.8.9",
     "react-visibility-sensor": "^5.1.1",
     "web-vitals": "^2.1.4"
   },
