--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Generative AI Summit 2023",
+  "name": "Generative AI Silicon Valley Summit 2023 by GPTDAO",
   "icons": [
     {
       "src": "favicon.ico",
