--- a/summit/package.json
+++ b/summit/package.json
@@ -10,11 +10,13 @@
     "react": "^18.2.0",
     "react-countup": "^6.4.2",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
     "react-modal-video": "^2.0.0",
     "react-owl-carousel": "^2.3.3",
     "react-router-dom": "^6.13.0",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.9",
+    "react-twitter-embed": "^4.0.4",
     "react-visibility-sensor": "^5.1.1",
     "web-vitals": "^2.1.4"
   },
