updated sponsor, banner, and promo code

--- a/summit/package.json
+++ b/summit/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "lax.js": "^2.0.3",
     "react": "^18.2.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-countup": "^6.4.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
