fixed ci warning

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,7 +30,7 @@ jobs:
       run: |
         cd summit
         npm ci
-        npm run build
+        CI=false npm run build
 
     - name: Deploy 🚀
       uses: JamesIves/github-pages-deploy-action@4.1.9
