--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,5 +1,7 @@
 name: Deploy to GitHub Pages
 
+permissions:
+  contents: write
 on:
   push:
     branches:
@@ -11,7 +13,7 @@ jobs:
 
     steps:
     - name: Checkout 🛎️
-      uses: actions/checkout@v2.4.2
+      uses: actions/checkout@v3
 
     - name: Setup Node.js
       uses: actions/setup-node@v3
@@ -33,7 +35,7 @@ jobs:
         CI=false npm run build
 
     - name: Deploy 🚀
-      uses: JamesIves/github-pages-deploy-action@4.1.9
+      uses: JamesIves/github-pages-deploy-action@v4
       with:
         branch: gh-pages
         folder: summit/build
