--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,6 +2,7 @@ name: Deploy to GitHub Pages
 
 permissions:
   contents: write
+
 on:
   push:
     branches:
@@ -34,11 +35,13 @@ jobs:
           npm ci
           CI=false npm run build
 
+      - name: Create CNAME file
+        run: echo "genaisummit.ai" > summit/build/CNAME
+
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@v4
         with:
           branch: gh-pages
           folder: summit/build
           clean: true
-          cname: genaisummit.ai
           token: ${{ secrets.GITHUB_TOKEN }}
