--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,7 +36,9 @@ jobs:
           CI=false npm run build
 
       - name: Create CNAME file
-        run: echo "genaisummit.ai" > summit/build/CNAME
+        run: |
+          mkdir -p summit/build
+          echo "genaisummit.ai" > summit/build/CNAME
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@v4
