--- a/summit/package.json
+++ b/summit/package.json
@@ -26,6 +26,7 @@
     "sass": "^1.63.5",
     "slick-carousel": "^1.8.1",
     "stripe": "^13.5.0",
+    "three": "^0.162.0",
     "vue": "^3.2.47",
     "vue-i18n": "^9.2.2",
     "vue-number-animation": "^2.0.2",
